# WpalUnity

./: LICENSE  README.md
Assets/Samples/Basic/: Basic.unity  GainPlayback.cs  WpalSample.cs
Assets/Samples/Recording/: AudioRecorder.cs  ExampleClass.cs  Recording.unity
Assets/Scenes/: SampleScene.unity
Plugin/wpal/: Cargo.toml
Plugin/wpal/src/: lib.rs
ProjectSettings/: ProjectSettings.asset
