[package]
name = "windows-process-audio-loopback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "interface",
    "implement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Security"
]

[lib]
name = "wpal"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "wpal-test"
